-- T014 — Reference tables. Seeded once, immutable at runtime.
-- FR-008 (roles), FR-027 (exactly four statuses), FR-020 (priority).

CREATE TABLE roles (
  role_id     NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  role_name   VARCHAR2(20)  NOT NULL,
  description VARCHAR2(200),
  CONSTRAINT uq_roles_name  UNIQUE (role_name),
  -- FR-008 [CLARIFIED]: exactly three roles. No fourth role may be inserted.
  CONSTRAINT ck_roles_name  CHECK (role_name IN ('ADMIN','MANAGER','MEMBER'))
);

CREATE TABLE task_status (
  status_id   NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  status_code VARCHAR2(20) NOT NULL,
  sort_order  NUMBER(2)    NOT NULL,
  CONSTRAINT uq_task_status_code  UNIQUE (status_code),
  CONSTRAINT uq_task_status_order UNIQUE (sort_order),
  -- Constitution VI / FR-027: the workflow is exactly these four values.
  -- This constraint is the storage-layer guarantee: no route into the data,
  -- including direct SQL, can produce a fifth status.
  CONSTRAINT ck_task_status_code
    CHECK (status_code IN ('TO_DO','IN_PROGRESS','REVIEW','COMPLETED'))
);

CREATE TABLE task_priority (
  priority_id   NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  priority_code VARCHAR2(20) NOT NULL,
  sort_order    NUMBER(2)    NOT NULL,
  CONSTRAINT uq_task_priority_code  UNIQUE (priority_code),
  CONSTRAINT uq_task_priority_order UNIQUE (sort_order),
  -- [PLAN] data-model.md: a fixed ordered set so FR-042 "tasks by priority" is countable.
  CONSTRAINT ck_task_priority_code
    CHECK (priority_code IN ('LOW','MEDIUM','HIGH'))
);
