-- T015 — USERS. FR-001..FR-007.

CREATE TABLE users (
  user_id       NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username      VARCHAR2(50)  NOT NULL,
  email         VARCHAR2(255) NOT NULL,
  password_hash VARCHAR2(100) NOT NULL,   -- BCrypt. Plaintext is never stored (FR-002).
  full_name     VARCHAR2(150) NOT NULL,
  role_id       NUMBER        NOT NULL,   -- FR-004: every user holds exactly one role.
  is_active     CHAR(1) DEFAULT 'Y' NOT NULL,
  created_at    TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at    TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT uq_users_username UNIQUE (username),
  CONSTRAINT uq_users_email    UNIQUE (email),
  CONSTRAINT ck_users_active   CHECK (is_active IN ('Y','N')),   -- FR-006
  CONSTRAINT fk_users_role     FOREIGN KEY (role_id) REFERENCES roles (role_id)
);
-- Users are never hard-deleted (spec Assumptions); deactivation is reversible (FR-006).
