-- T016 — PROJECTS and PROJECT_MEMBERS. FR-009..FR-015.

CREATE TABLE projects (
  project_id  NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name        VARCHAR2(150) NOT NULL,
  description CLOB,
  status      VARCHAR2(20)  NOT NULL,     -- FR-012
  start_date  DATE,
  end_date    DATE,
  created_by  NUMBER        NOT NULL,
  created_at  TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at  TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  -- US2 scenario 5: an end date before the start date must be rejected.
  CONSTRAINT ck_projects_dates  CHECK (end_date IS NULL OR start_date IS NULL
                                       OR end_date >= start_date),
  CONSTRAINT ck_projects_status CHECK (status IN ('PLANNED','ACTIVE','COMPLETED')),
  CONSTRAINT fk_projects_creator FOREIGN KEY (created_by) REFERENCES users (user_id)
);

-- Many-to-many: a project has many members, a user belongs to many projects
-- (Constitution IV). Membership also defines task-sharing visibility (FR-035 [CLARIFIED]).
CREATE TABLE project_members (
  project_id NUMBER NOT NULL,
  user_id    NUMBER NOT NULL,
  added_at   TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_project_members PRIMARY KEY (project_id, user_id),
  CONSTRAINT fk_pm_project FOREIGN KEY (project_id)
    REFERENCES projects (project_id) ON DELETE CASCADE,
  CONSTRAINT fk_pm_user    FOREIGN KEY (user_id)
    REFERENCES users (user_id)
);
