-- T017 — TASKS and TASK_ASSIGNEES. FR-016..FR-023, FR-019.

CREATE TABLE tasks (
  task_id     NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  project_id  NUMBER        NOT NULL,     -- a task always belongs to a project
  title       VARCHAR2(200) NOT NULL,
  description CLOB,
  status_id   NUMBER        NOT NULL,     -- FR-021
  priority_id NUMBER        NOT NULL,     -- FR-020
  start_date  DATE,
  due_date    DATE,
  created_by  NUMBER        NOT NULL,
  created_at  TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  updated_at  TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  -- US3 scenario 5: a due date before the start date must be rejected.
  CONSTRAINT ck_tasks_dates CHECK (due_date IS NULL OR start_date IS NULL
                                   OR due_date >= start_date),
  CONSTRAINT fk_tasks_project  FOREIGN KEY (project_id)
    REFERENCES projects (project_id) ON DELETE CASCADE,
  CONSTRAINT fk_tasks_status   FOREIGN KEY (status_id)   REFERENCES task_status (status_id),
  CONSTRAINT fk_tasks_priority FOREIGN KEY (priority_id) REFERENCES task_priority (priority_id),
  CONSTRAINT fk_tasks_creator  FOREIGN KEY (created_by)  REFERENCES users (user_id)
);

-- Many-to-many: FR-019 requires a task to be assignable to one OR MORE users.
CREATE TABLE task_assignees (
  task_id     NUMBER NOT NULL,
  user_id     NUMBER NOT NULL,
  assigned_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  assigned_by NUMBER NOT NULL,            -- who performed the assignment (FR-032)
  CONSTRAINT pk_task_assignees PRIMARY KEY (task_id, user_id),
  CONSTRAINT fk_ta_task FOREIGN KEY (task_id)
    REFERENCES tasks (task_id) ON DELETE CASCADE,
  CONSTRAINT fk_ta_user        FOREIGN KEY (user_id)     REFERENCES users (user_id),
  CONSTRAINT fk_ta_assigned_by FOREIGN KEY (assigned_by) REFERENCES users (user_id)
);
