-- T018 — SUBTASKS, COMMENTS, ATTACHMENTS. FR-024..FR-026.
-- Every child cascades from TASKS so SC-011 holds for any route into the data:
-- no orphaned subtask, comment, or attachment is ever reachable.

CREATE TABLE subtasks (
  subtask_id   NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  task_id      NUMBER        NOT NULL,
  title        VARCHAR2(200) NOT NULL,
  is_completed CHAR(1) DEFAULT 'N' NOT NULL,
  sort_order   NUMBER(4) DEFAULT 0 NOT NULL,
  created_at   TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT ck_subtasks_completed CHECK (is_completed IN ('Y','N')),
  CONSTRAINT fk_subtasks_task FOREIGN KEY (task_id)
    REFERENCES tasks (task_id) ON DELETE CASCADE
);
-- R-015: a parent task may reach COMPLETED while subtasks remain incomplete.
-- No constraint enforces any relationship between the two; that is deliberate.

CREATE TABLE comments (
  comment_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  task_id    NUMBER NOT NULL,
  user_id    NUMBER NOT NULL,
  body       CLOB   NOT NULL,
  created_at TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT fk_comments_task FOREIGN KEY (task_id)
    REFERENCES tasks (task_id) ON DELETE CASCADE,
  CONSTRAINT fk_comments_user FOREIGN KEY (user_id) REFERENCES users (user_id)
);

CREATE TABLE attachments (
  attachment_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  task_id       NUMBER        NOT NULL,
  uploaded_by   NUMBER        NOT NULL,
  original_name VARCHAR2(255) NOT NULL,
  stored_name   VARCHAR2(255) NOT NULL,   -- system-generated, never user input (R-008)
  content_type  VARCHAR2(150) NOT NULL,
  size_bytes    NUMBER        NOT NULL,
  uploaded_at   TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT uq_attachments_stored UNIQUE (stored_name),
  CONSTRAINT ck_attachments_size   CHECK (size_bytes > 0),
  CONSTRAINT fk_attachments_task FOREIGN KEY (task_id)
    REFERENCES tasks (task_id) ON DELETE CASCADE,
  CONSTRAINT fk_attachments_user FOREIGN KEY (uploaded_by) REFERENCES users (user_id)
);
-- Bytes live on the filesystem under TMS_ATTACHMENT_DIR; only metadata is stored here (R-008).
