-- T019 — NOTIFICATIONS. FR-054..FR-061. [CLARIFIED] — optional in the official document.

CREATE TABLE notifications (
  notification_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  recipient_id    NUMBER        NOT NULL,
  task_id         NUMBER,                  -- nullable: task may be deleted (spec Edge Cases)
  trigger_type    VARCHAR2(20)  NOT NULL,
  message         VARCHAR2(500) NOT NULL,
  is_read         CHAR(1) DEFAULT 'N' NOT NULL,
  created_at      TIMESTAMP DEFAULT SYSTIMESTAMP NOT NULL,
  -- Exactly the five official triggers. No sixth trigger may be inserted.
  CONSTRAINT ck_notifications_trigger
    CHECK (trigger_type IN ('ASSIGNMENT','UPDATE','DEADLINE','OVERDUE','COMMENT')),
  CONSTRAINT ck_notifications_read CHECK (is_read IN ('Y','N')),
  CONSTRAINT fk_notifications_user FOREIGN KEY (recipient_id) REFERENCES users (user_id),
  CONSTRAINT fk_notifications_task FOREIGN KEY (task_id)
    REFERENCES tasks (task_id) ON DELETE CASCADE
);

-- R-007: idempotence for the two date-driven triggers. The scheduled job may run
-- any number of times; a task that stays overdue for days notifies exactly once.
-- Unique index (not a constraint) so it applies only to DEADLINE and OVERDUE rows.
CREATE UNIQUE INDEX uq_notifications_scheduled ON notifications (
  CASE WHEN trigger_type IN ('DEADLINE','OVERDUE') THEN task_id      END,
  CASE WHEN trigger_type IN ('DEADLINE','OVERDUE') THEN recipient_id END,
  CASE WHEN trigger_type IN ('DEADLINE','OVERDUE') THEN trigger_type END
);
